--- a/blocks/photos-grid/__list/photos-grid__list.css
+++ b/blocks/photos-grid/__list/photos-grid__list.css
@@ -8,3 +8,9 @@
   list-style: none;
   box-sizing: border-box;
 }
+
+@media screen and (max-width: 362px) {
+  .photos-grid__list {
+    margin: 36px auto 0;
+  }
+}
