--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,3 +4,9 @@
   font-size: 18px;
   line-height: 1.22;
 }
+
+@media screen and (max-width: 362px) {
+  .footer__copyright {
+    font-size: 14px;
+  }
+}
