--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,9 @@
   font-family: "Inter", Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
   background-color: #000000;
   color: #ffffff;
   width: 100%;
