--- a/blocks/photos-grid/__card/photos-grid__card.css
+++ b/blocks/photos-grid/__card/photos-grid__card.css
@@ -1,6 +1,7 @@
 .photos-grid__card {
   margin: 0;
   padding: 0;
+  width: 100%;
   background-color: #ffffff;
   border-radius: 10px;
   overflow: hidden;
