--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,3 +1,16 @@
 .profile__info {
-  margin: 0 0 0 30px;
+  margin: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: baseline;
+  box-sizing: border-box;
+  gap: 10px;
+}
+
+@media screen and (max-width: 606px) {
+  .profile__info {
+    align-items: center;
+  }
 }
