--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -4,3 +4,16 @@
   line-height: 1.14;
   margin: 0;
 }
+
+@media screen and (max-width: 456px) {
+  .profile__name {
+    font-size: 32px;
+  }
+}
+
+@media screen and (max-width: 362px) {
+  .profile__name {
+    font-size: 22px;
+    line-height: 1.23;
+  }
+}
