--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -2,5 +2,8 @@
   margin: 40px auto 0;
   display: flex;
   flex-direction: row;
+  justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
+  gap: 30px;
 }
