--- a/blocks/photos-grid/__list/photos-grid__list.css
+++ b/blocks/photos-grid/__list/photos-grid__list.css
@@ -1,7 +1,7 @@
 .photos-grid__list {
   margin: 50px auto 0;
   padding: 0;
-  width: 100%;
+  /* width: 100%; */
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
   grid-gap: 17px;
