--- a/blocks/photos-grid/__location/photos-grid__card.css
+++ b/blocks/photos-grid/__location/photos-grid__card.css
@@ -1,7 +1,6 @@
-.photos-grid__card {
+.photos- {
   margin: 0 auto;
   padding: 0;
-  width: 100%;
   max-width: 282px;
   background-color: #ffffff;
   border-radius: 10px;
