--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,7 +1,8 @@
-.button_type_add {
+.profile__add-button {
   margin-left: auto;
   width: 150px;
   height: 50px;
+  max-width: 18%;
   border: 2px solid #ffffff;
   box-sizing: border-box;
   border-radius: 2px;
@@ -10,8 +11,10 @@
   align-items: center;
 }
 
-@media screen and (max-width: 787px) {
-  .button_type_add {
+@media screen and (max-width: 618px) {
+  .profile__add-button {
+    margin: 0 auto;
+    max-width: 282px;
     width: 100%;
   }
 }
