--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,5 +1,6 @@
 .profile__info {
   margin: 0;
+  max-width: 57%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -9,8 +10,10 @@
   gap: 10px;
 }
 
-@media screen and (max-width: 606px) {
+@media screen and (max-width: 618px) {
   .profile__info {
+    max-width: 100%;
+    width: 100%;
     align-items: center;
   }
 }
