fix: fix all correction from code reviews

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,5 +2,12 @@
   width: 100%;
   max-width: 880px;
   margin: 0 auto;
+  padding: 45px 0 41px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+}
+
+@media screen and (max-width: 362px) {
+  .header {
+    padding: 28px 0 32px 8px;
+  }
 }
