--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,6 @@
 /* vendors */
 @import url(../vendors/normalize.css);
-@import url(../fonts.css);
+@import url(../vendors/fonts.css);
 /* vendors */
 
 /* blocks */
