--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,4 +1,10 @@
 .popup__close-button {
+  all: unset;
+  width: 40px;
+  height: 40px;
+  background-image: url(../../../images/closeicon.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
   position: absolute;
   top: -40px;
   right: -40px;
