--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -6,9 +6,9 @@
   border: 2px solid #ffffff;
   box-sizing: border-box;
   border-radius: 2px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background-image: url(../../../images/add_button.svg);
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 @media screen and (max-width: 618px) {
@@ -16,5 +16,11 @@
     margin: 0 auto;
     max-width: 282px;
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 362px) {
+  .profile__add-button {
+    background-size: 16px;
   }
 }
