--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,6 +1,12 @@
 .profile__edit-button {
+  all: unset;
+  background-image: url(../../../images/edit_button.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   width: 24px;
   height: 24px;
+  max-width: 10%;
 }
 
 @media screen and (max-width: 456px) {
