--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -2,6 +2,7 @@
   font-size: 42px;
   font-weight: 500;
   line-height: 1.14;
+  max-width: 90%;
   margin: 0;
   text-overflow: ellipsis;
   overflow: hidden;
