--- a/pages/index.css
+++ b/pages/index.css
@@ -40,5 +40,6 @@
 /* elements */
 
 /* modifiers */
-
+@import url(../blocks/popup/__input/_type/popup__input_type_place.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_img-src.css);
 /* modifiers */
