--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,6 @@
 .popup {
-  display: none;
+  opacity: 0;
+  visibility: hidden;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1000;
   width: 100%;
@@ -9,8 +10,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  transition: visibility 0.5s, opacity 0.5s;
 }
 
 .popup_opened {
-  display: block;
+  visibility: visible;
+  opacity: 1;
 }
