--- a/pages/index.css
+++ b/pages/index.css
@@ -34,7 +34,9 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__header/popup__header.css);
 @import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__field/popup__field.css);
 @import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/picture-popup/__popup-container/picture-popup__popup-container.css);
@@ -45,4 +47,5 @@
 /* modifiers */
 @import url(../blocks/popup/__input/_type/popup__input_type_place.css);
 @import url(../blocks/popup/__input/_type/popup__input_type_img-src.css);
+@import url(../blocks/popup/__input/_state/popup__input_state_error.css);
 /* modifiers */
