--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -12,7 +12,7 @@
   transition: opacity 0.5s ease 0s;
 }
 
-.popup__save-button:hover {
+.popup__save-button:hover:enabled {
   opacity: 0.8;
   cursor: pointer;
 }
