--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -22,6 +22,7 @@
   border: 1px solid #000000;
   color: #000000;
   opacity: 0.2;
+  cursor: not-allowed;
 }
 
 @media screen and (max-width: 362px) {
