--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,8 +1,13 @@
 .profile__avatar {
   border-radius: 50%;
   width: 120px;
-  height: auto;
-  max-width: 14%;
+  height: 120px;
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  top: 0;
+  left: 0;
+  z-index: 0;
 }
 
 @media screen and (max-width: 618px) {
